--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx next build && NODE_ENV=production pm2 start server.js"
+    "start": "rm -rf .next && npx next build && NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
